<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
      android:background="@drawable/back">
<TextView
        android:id="@+id/Title5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:layout_marginLeft="95dp"
        android:layout_marginTop="15dp"
        android:textColor="#000000"
       android:textSize="20sp"
        android:text="@string/Title5" />
<TextView
        android:id="@+id/Detail5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:layout_marginTop="10dp"
        android:textColor="#242731"
        android:textSize="16sp"
        android:text="@string/Detail5" />
     <TextView
        android:id="@+id/Detail50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
        android:textColor="#707070"
        android:textSize="14sp"
        android:text="@string/Detail50" />
      <TextView
        android:id="@+id/Detail51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#242731"
        android:textSize="16sp"
        android:text="@string/Detail51" />
       <TextView
        android:id="@+id/Detail52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
        android:textColor="#707070"
        android:textSize="14sp"
        android:text="@string/Detail52" />
      <TextView
        android:id="@+id/Detail53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#242731"
        android:textSize="16sp"
        android:text="@string/Detail53" />
      <TextView
        android:id="@+id/Detail54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
        android:textColor="#242731"
        android:textSize="16sp"
        android:text="@string/Detail54" />
       <TextView
        android:id="@+id/Detail55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
        android:textColor="#707070"
        android:textSize="14sp"
        android:text="@string/Detail55" />
      <TextView
        android:id="@+id/Detail56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#242731"
        android:textSize="16sp"
        android:text="@string/Detail56" />
</LinearLayout></ScrollView>
