<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
      android:background="@drawable/back">
<TextView
         android:id="@+id/Title12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="15dp"
        android:textColor="#000000"
      android:textSize="20sp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
        android:text="@string/Title12" />
<TextView
        android:id="@+id/Detail12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
        android:textColor="#242731"
        android:textSize="16sp"
        android:text="@string/Detail12" />
<TextView
        android:id="@+id/Titleq0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
          android:layout_marginTop="10dp"
           android:paddingStart="10dp"
         android:paddingEnd="10dp"
        android:text="@string/Titleq0"
        android:textColor="#242731"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/button120"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
         android:layout_marginBottom="4dp"
        android:onClick="onButtonClicked120"
        style="?android:attr/borderlessButtonStyle" 
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
        android:text="@string/Q120"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/textview120"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:textColor="#707070"
        android:text="@string/A120" 
         android:layout_marginBottom="4dp"
          android:paddingStart="10dp"
         android:paddingEnd="10dp"
        android:visibility="invisible"
        android:textSize="14sp"/>
    <Button
        android:id="@+id/button121"
        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
        android:onClick="onButtonClicked121"
         android:layout_marginBottom="4dp"
         android:layout_marginLeft="-3dp"
          android:paddingStart="10dp"
         android:paddingEnd="10dp"
        style="?android:attr/borderlessButtonStyle" 
        android:text="@string/Q121"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/textview121"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:textColor="#707070"
          android:layout_marginBottom="4dp"
        android:text="@string/A121" 
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
        android:visibility="invisible"
        android:textSize="14sp"/>
    <Button
        android:id="@+id/button122"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:onClick="onButtonClicked122"
         android:layout_marginBottom="4dp"
           android:layout_marginLeft="-3dp"
            android:paddingStart="10dp"
         android:paddingEnd="10dp"
        style="?android:attr/borderlessButtonStyle" 
        android:text="@string/Q122"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/textview122"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
          android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:textColor="#707070"
        android:text="@string/A122" 
        android:visibility="invisible"
        android:textSize="14sp"/>
</LinearLayout></ScrollView>

